# cyro

./: .cyro.example.yaml  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
cmd/: analyze.go  analyze_prompts.go  analyze_test.go  ask.go  ask_prompts.go  ask_test.go  root.go  search.go  search_test.go  stats.go  stats_test.go  tail.go  version.go
docs/: DESIGN.md  ROADMAP.md
internal/analyzer/: analyzer.go
internal/config/: config.go  config_test.go  glob.go  glob_test.go  time.go  time_test.go
internal/llm/: adapter.go  doc.go  llm.go  llm_test.go  providers.go
internal/llm/ollama/: ollama.go  ollama_test.go
internal/output/: color.go  color_test.go  output.go
internal/parser/: parser.go  parser_test.go
internal/preprocess/: compress.go  doc.go  drain.go  patterns.go  preprocess.go  preprocess_test.go  redact.go
internal/prompt/: doc.go  prompt_test.go  system.go  templates.go  types.go
internal/tail/: tail.go  tail_test.go
src/cyro/: __init__.py  __main__.py
src/cyro/agents/: __init__.py  base.py  manager.py
src/cyro/cli/: __init__.py  agent.py  chat.py  config.py  main.py  shared.py
src/cyro/config/: __init__.py  settings.py  themes.py
src/cyro/models/: __init__.py
src/cyro/tools/: __init__.py  code.py  execution.py  factory.py  filesystem.py  git.py  task_management.py  web.py
src/cyro/utils/: __init__.py  console.py  errors.py  logging.py
tests/: __init__.py
tests/agents/: test_base.py
tests/config/: __init__.py  test_themes.py
